--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 # Tom's Obvious Minimal Language
 [project]
 name = "findmodules"
-version = "0.5"
+version = "0.6"
 authors = [
   { name="William Bailey", email="william.bailey@centre.edu" },
 ]
@@ -16,3 +16,7 @@ classifiers = [
 
 [project.urls]
 "Homepage" = "https://github.com/wba234/baileycs1"
+
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
