--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,11 @@
 # Tom's Obvious Minimal Language
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "findmodules"
-version = "0.6"
+version = "0.8"
 authors = [
   { name="William Bailey", email="william.bailey@centre.edu" },
 ]
@@ -16,7 +20,3 @@ classifiers = [
 
 [project.urls]
 "Homepage" = "https://github.com/wba234/baileycs1"
-
-[build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
