Updated names to vpltools.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "cSpell.words": [
         "baileycs",
-        "findmodules",
+        "vpltools",
         "importlib",
         "pylint",
         "pyproject",
