--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+dependencies = ["mariadb>1.1.12"]
 
 [project]
 name = "vpltools"
