--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
   "mariadb >=1.1.12",
+  "pandas >=2.2.4",
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
