--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requires-python = ">=3.7"
 dependencies = [
   "mariadb >=1.1.12",
   "pandas >=2.2.4",
+  "bottleneck >=1.3.6",
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
